# cost-audit-agent

./: .env.example  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml
cost_audit_agent/: __init__.py  __main__.py  mcp_server.py  report.py
cost_audit_agent/providers/: __init__.py  anthropic.py  base.py  github.py  hyperdx.py  openpanel.py  supabase.py  vercel.py
tests/: test_mcp_server.py  test_providers.py  test_report.py  test_v03_providers.py
