[project]
name = "cost-audit-agent"
version = "0.4.0"
description = "Solo Founder OS agent #11 — monthly bill audit across Vercel / Anthropic / Supabase / OpenPanel / HyperDX. Flags underused SaaS + spend spikes."
authors = [{ name = "Alex Ji", email = "alex@vibexforge.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "solo-founder-os>=0.3.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
keywords = ["billing", "audit", "vercel", "anthropic", "indie", "saas"]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "mcp>=1.0"]

[project.scripts]
cost-audit-agent = "cost_audit_agent.__main__:main"
cost-audit-mcp = "cost_audit_agent.mcp_server:main"

[project.urls]
Repository = "https://github.com/alex-jb/cost-audit-agent"
Issues = "https://github.com/alex-jb/cost-audit-agent/issues"
Homepage = "https://github.com/alex-jb/cost-audit-agent"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cost_audit_agent", "cost_audit_agent.providers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
